--- a/src/update3/org/subjectselector/metro-ui.css
+++ b/src/update3/org/subjectselector/metro-ui.css
@@ -9,7 +9,7 @@ Created 10-06-2017
 
 /* For Background */
 .metro-base-color{
-    -fx-background-color:  #5E9CE9;
+    -fx-background-color:  #46CDAC;
 }
 
 .metro-title-1{
