--- a/src/update3/org/subjectselector/metro-ui-table.css
+++ b/src/update3/org/subjectselector/metro-ui-table.css
@@ -49,11 +49,11 @@
     -fx-border-width: 0 0 1 0;
     -fx-border-style: dashed;
     -fx-border-color: #FFFFFF;
-    -fx-background-color: #5E9CE9;
+    -fx-background-color: #46CDAC;
 }
 .metro-row:hover{
     -fx-cursor: hand;
-    -fx-background-color: #3584e3;
+    -fx-background-color: #31b493;
 }
 
 .label{
