--- a/src/update2/org/cict/layout/academicprogram/academic-program-home.fxml
+++ b/src/update2/org/cict/layout/academicprogram/academic-program-home.fxml
@@ -107,13 +107,13 @@
                         </ImageView>
                         <VBox alignment="CENTER_LEFT" prefHeight="150.0" prefWidth="517.0">
                            <children>
-                              <Label text="No Academic Program Found" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lbl_title_no_found" text="No Academic Program Found" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font name="System Bold" size="28.0" />
                                  </font>
                               </Label>
                               <Line endX="340.0" startX="-100.0" stroke="WHITE" />
-                              <Label text="Note: The result shown are sorted to saved and not saved programs." textAlignment="JUSTIFY" textFill="WHITE" wrapText="true">
+                              <Label fx:id="lbl_subtitle_no_found" text="Note: The result shown are sorted to saved and not saved programs." textAlignment="JUSTIFY" textFill="WHITE" wrapText="true">
                                  <font>
                                     <Font size="20.0" />
                                  </font>
