--- a/src/update2/org/cict/layout/subjects/add-new-subject.fxml
+++ b/src/update2/org/cict/layout/subjects/add-new-subject.fxml
@@ -29,13 +29,6 @@
                                  <font>
                                     <Font size="25.0" />
                                  </font>
-                                 <graphic>
-                                    <ImageView fitHeight="43.0" fitWidth="44.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@../academicprogram/images/Chevron%20Right_50px.png" />
-                                       </image>
-                                    </ImageView>
-                                 </graphic>
                               </Label>
                            </children>
                            <VBox.margin>
@@ -194,12 +187,15 @@
                      <padding>
                         <Insets left="40.0" right="20.0" />
                      </padding>
+                     <VBox.margin>
+                        <Insets top="30.0" />
+                     </VBox.margin>
                   </VBox>
                </children>
             </VBox>
             <AnchorPane prefHeight="200.0" prefWidth="200.0" HBox.hgrow="ALWAYS">
                <children>
-                  <AnchorPane layoutX="14.0" layoutY="76.0" prefHeight="318.0" prefWidth="445.0" style="-fx-border-color: #fff; -fx-border-width: 2;" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="70.0" AnchorPane.topAnchor="76.0">
+                  <AnchorPane layoutX="14.0" layoutY="76.0" prefHeight="318.0" prefWidth="445.0" style="-fx-border-color: #fff; -fx-border-width: 2;" AnchorPane.leftAnchor="14.0" AnchorPane.rightAnchor="70.0" AnchorPane.topAnchor="100.0">
                      <children>
                         <Label layoutX="14.0" layoutY="22.0" text="Subject Creation" textFill="WHITE">
                            <font>
