--- a/src/update5/org/cict/student/layout/InfoStudent.fxml
+++ b/src/update5/org/cict/student/layout/InfoStudent.fxml
@@ -109,28 +109,6 @@
                         <Insets left="20.0" />
                      </VBox.margin>
                   </JFXButton>
-                  <JFXButton fx:id="btn_verify" layoutX="45.0" layoutY="157.0" prefHeight="41.0" prefWidth="304.0" style="-fx-border-color: #fff;" text="Verify Student">
-                     <styleClass>
-                        <String fx:value="label" />
-                        <String fx:value="metro-base-color" />
-                     </styleClass>
-                     <font>
-                        <Font size="18.0" />
-                     </font>
-                     <padding>
-                        <Insets bottom="10.0" top="10.0" />
-                     </padding>
-                     <graphic>
-                        <ImageView fitHeight="33.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
-                           <image>
-                              <Image url="@images/Verified%20Account_64px.png" />
-                           </image>
-                        </ImageView>
-                     </graphic>
-                     <VBox.margin>
-                        <Insets left="20.0" />
-                     </VBox.margin>
-                  </JFXButton>
                   <JFXButton fx:id="btn_change_college" layoutX="45.0" layoutY="238.0" prefHeight="41.0" prefWidth="304.0" style="-fx-border-color: #fff;" text="Change College">
                      <styleClass>
                         <String fx:value="label" />
@@ -219,9 +197,44 @@
                         <Insets left="20.0" />
                      </VBox.margin>
                   </JFXButton>
+                  <VBox alignment="BOTTOM_CENTER" prefHeight="200.0" prefWidth="100.0" styleClass="metro-base-color">
+                     <children>
+                        <HBox alignment="CENTER_LEFT" prefHeight="31.0" prefWidth="376.0" spacing="10.0">
+                           <children>
+                              <Label minWidth="-Infinity" prefHeight="21.0" prefWidth="97.0" text="Verified By:">
+                                 <font>
+                                    <Font name="System Bold" size="15.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="lbl_verified_by" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" text="NONE" wrapText="true" HBox.hgrow="ALWAYS">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                        <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="10.0" prefHeight="26.0" prefWidth="376.0" spacing="10.0">
+                           <children>
+                              <Label minWidth="-Infinity" text="Verified Date:">
+                                 <font>
+                                    <Font name="System Bold" size="15.0" />
+                                 </font>
+                              </Label>
+                              <Label fx:id="lbl_verified_date" layoutX="10.0" layoutY="10.0" maxWidth="1.7976931348623157E308" text="NONE" HBox.hgrow="ALWAYS">
+                                 <font>
+                                    <Font size="15.0" />
+                                 </font>
+                              </Label>
+                           </children>
+                        </HBox>
+                     </children>
+                     <padding>
+                        <Insets bottom="20.0" left="20.0" />
+                     </padding>
+                  </VBox>
                </children>
             </VBox>
-            <VBox alignment="BOTTOM_CENTER" prefHeight="645.0" prefWidth="580.0">
+            <VBox alignment="CENTER" prefHeight="645.0" prefWidth="580.0">
                <children>
                   <GridPane vgap="15.0">
                     <columnConstraints>
@@ -387,7 +400,7 @@
                         </HBox>
                      </children>
                      <VBox.margin>
-                        <Insets left="30.0" right="20.0" top="5.0" />
+                        <Insets left="20.0" right="20.0" top="5.0" />
                      </VBox.margin>
                   </GridPane>
                   <GridPane prefHeight="44.0" prefWidth="494.0">
@@ -445,7 +458,7 @@
                   </GridPane>
                   <VBox alignment="CENTER" spacing="10.0">
                      <children>
-                        <JFXButton fx:id="btn_editsave" maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="304.0" style="-fx-border-color: #fff;" text="Edit Info" VBox.vgrow="ALWAYS">
+                        <JFXButton fx:id="btn_editsave" maxWidth="1.7976931348623157E308" prefHeight="41.0" prefWidth="304.0" style="-fx-border-color: #fff;" text="Save Changes" VBox.vgrow="ALWAYS">
                            <styleClass>
                               <String fx:value="label" />
                               <String fx:value="metro-base-color" />
@@ -454,7 +467,7 @@
                               <Font size="18.0" />
                            </font>
                            <VBox.margin>
-                              <Insets left="50.0" right="20.0" />
+                              <Insets left="20.0" right="20.0" />
                            </VBox.margin>
                            <padding>
                               <Insets bottom="5.0" top="5.0" />
@@ -471,18 +484,18 @@
                   </VBox>
                </children>
                <HBox.margin>
-                  <Insets bottom="65.0" />
+                  <Insets bottom="20.0" />
                </HBox.margin>
             </VBox>
             <VBox alignment="CENTER" prefHeight="635.0" prefWidth="393.0">
                <children>
-                  <VBox spacing="10.0" style="-fx-border-color: #fff;">
+                  <VBox fx:id="vbox_verify" alignment="CENTER" spacing="10.0" style="-fx-border-color: #fff;">
                      <children>
                         <VBox>
                            <children>
-                              <Label text="Course Shifting">
+                              <Label text="Verify Student Now">
                                  <font>
-                                    <Font size="29.0" />
+                                    <Font size="23.0" />
                                  </font>
                                  <graphic>
                                     <ImageView fitHeight="33.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
@@ -492,16 +505,20 @@
                                     </ImageView>
                                  </graphic>
                               </Label>
-                              <Label text="Note here">
+                              <Label text="To enable all updating processes, editing of grades and even request for student profile and deficiency report you need to verify student first." wrapText="true">
                                  <font>
                                     <Font size="15.0" />
                                  </font>
                                  <graphic>
-                                    <ImageView fitHeight="22.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
-                                       <image>
-                                          <Image url="@images/Info_96px.png" />
-                                       </image>
-                                    </ImageView>
+                                    <VBox prefHeight="80.0" prefWidth="20.0">
+                                       <children>
+                                          <ImageView fitHeight="22.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/Info_96px.png" />
+                                             </image>
+                                          </ImageView>
+                                       </children>
+                                    </VBox>
                                  </graphic>
                                  <VBox.margin>
                                     <Insets left="20.0" />
@@ -509,7 +526,7 @@
                               </Label>
                            </children>
                         </VBox>
-                        <JFXButton fx:id="btn_shift_course" prefHeight="41.0" prefWidth="365.0" style="-fx-border-color: #fff;" text="Shift Course" VBox.vgrow="ALWAYS">
+                        <JFXButton fx:id="btn_verify" prefHeight="41.0" prefWidth="304.0" style="-fx-border-color: #fff;" text="Verify Student">
                            <styleClass>
                               <String fx:value="label" />
                               <String fx:value="metro-base-color" />
@@ -517,29 +534,93 @@
                            <font>
                               <Font size="18.0" />
                            </font>
-                           <VBox.margin>
-                              <Insets left="20.0" right="20.0" />
-                           </VBox.margin>
+                           <padding>
+                              <Insets bottom="10.0" top="10.0" />
+                           </padding>
                            <graphic>
-                              <ImageView fitHeight="35.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                              <ImageView fitHeight="33.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@images/Course%20Assign_50px.png" />
+                                    <Image url="@images/Verified%20Account_64px.png" />
                                  </image>
                               </ImageView>
                            </graphic>
                         </JFXButton>
                      </children>
+                     <padding>
+                        <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                     </padding>
                      <VBox.margin>
                         <Insets bottom="20.0" left="20.0" right="20.0" />
                      </VBox.margin>
-                     <padding>
-                        <Insets bottom="10.0" left="10.0" top="10.0" />
-                     </padding>
+                  </VBox>
+                  <VBox alignment="BOTTOM_CENTER" prefHeight="274.0" prefWidth="319.0">
+                     <VBox.margin>
+                        <Insets bottom="20.0" left="20.0" right="20.0" />
+                     </VBox.margin>
+                     <children>
+                        <VBox spacing="10.0" style="-fx-border-color: #fff;">
+                           <children>
+                              <VBox>
+                                 <children>
+                                    <Label text="Course Shifting">
+                                       <font>
+                                          <Font size="21.0" />
+                                       </font>
+                                       <graphic>
+                                          <ImageView fitHeight="33.0" fitWidth="34.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/tip_50.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                    </Label>
+                                    <Label text="Note here">
+                                       <font>
+                                          <Font size="15.0" />
+                                       </font>
+                                       <graphic>
+                                          <ImageView fitHeight="22.0" fitWidth="20.0" pickOnBounds="true" preserveRatio="true">
+                                             <image>
+                                                <Image url="@images/Info_96px.png" />
+                                             </image>
+                                          </ImageView>
+                                       </graphic>
+                                       <VBox.margin>
+                                          <Insets left="20.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                 </children>
+                              </VBox>
+                              <JFXButton fx:id="btn_shift_course" prefHeight="41.0" prefWidth="304.0" style="-fx-border-color: #fff;" text="Shift Course" VBox.vgrow="ALWAYS">
+                                 <styleClass>
+                                    <String fx:value="label" />
+                                    <String fx:value="metro-base-color" />
+                                 </styleClass>
+                                 <font>
+                                    <Font size="18.0" />
+                                 </font>
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                                 <graphic>
+                                    <ImageView fitHeight="35.0" fitWidth="28.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@images/Course%20Assign_50px.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                                 <padding>
+                                    <Insets bottom="10.0" top="10.0" />
+                                 </padding>
+                              </JFXButton>
+                           </children>
+                           <padding>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </padding>
+                        </VBox>
+                     </children>
                   </VBox>
                </children>
-               <HBox.margin>
-                  <Insets bottom="10.0" />
-               </HBox.margin>
             </VBox>
          </children>
       </HBox>
